--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.81.1",
+    "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query": "^5.90.9",
+    "@tanstack/react-table": "^8.21.3",
     "@vercel/analytics": "^1.5.0",
+    "babel-plugin-react-compiler": "^1.0.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
